Fix login icons to be visible when field has value

--- a/app/assets/stylesheets/_forms.scss
+++ b/app/assets/stylesheets/_forms.scss
@@ -293,10 +293,7 @@ body.devise {
 
     @include placeholder($sans, 25px);
     background: image-url('ic-login.png') no-repeat $white;
-
-    &.filled {
-      background: $white;
-    }
+    padding-left: 30px;
   }
 
   input[type="email"] {
